<resources>
    <string name="app_name">Midar</string>
    <string name="login">Login</string>
    <string name="email">Enter your email</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="are_you_sure">Are you sure you want to delete this post?</string>
    <string name="cancel">Cancel</string>
    <string name="agree">I agree to the terms and conditions</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="Disconnect">Disconnect from Midar</string>
    <string name="profile">Profile</string>
    <string name="no_post">No post for you</string>
    <string name="post">Post</string>
    <string name="verify_otp">Verify otp</string>
    <string name="leave_your_thoughts_here">Leave your thoughts here...</string>
    <string name="done">Done</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="comments">Comments</string>
    <string name="campaign">Campaign</string>
    <string name="posts">Posts</string>
    <string name="responsible">Responsible</string>
    <string name="average_rating">Average \n Rating</string>
    <string name="my_rating">My Rating</string>
    <string name="submit">Submit</string>
    <string name="bit_newsfeed">BIT Newsfeed</string>
    <string name="email_with">Email with your password was sent to your mailbox</string>
    <string name="date">Published by BIT 2020-09-12 09:12:34</string>
    <string name="die">The Transformation Initiative \n of the FOITT</string>
    <string name="message1">Rajkot is the fourth-largest city in the state of Gujarat</string>
    <string name="message2">Ahmedabad is the largest city and former capital of the Indian state of Gujarat</string>
    <string name="message3">Vadodara , is the third largest city in the Indian state of Gujarat</string>
    <string name="txtCredits2">I agree to the</string>
    <string name="txtCredits"><a href="https://www.midar.swiss/app-netiquette">Terms of Service and Privacy Policy</a></string>
    <string name="message">POst Message 3 Post 3 For Testing,POst Message 3 Post 3 For Testing,POst Message 3 Post 3 For Testing</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="upload_file">Upload file</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Document">Document</string>
    <string name="mailings">Mailings</string>
    <string name="ratings">Bewertungen</string>
    <string name="Dislikes">Abneigungen</string>
    <string name="Sharings">Aktien</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="imprint">Imprint</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="publish_by">Published by</string>
    <string name="online_help">Online Help</string>
    <string name="legal">Legal</string>
    <string name="developed_by">Developed by</string>
    <string name="data_protaction"><a href="https://www.midar.swiss/app-netiquette">Data protection statement &amp; Cindition of use</a></string>
    <string name="source_code">Source code</string>
    <string name="license">This app is licensed subject to the condition of the MPL 2 license</string>
    <string name="impressus_link1"><a href="https://www.midar.swiss/help">www.midar.swiss/help</a></string>
    <string name="impressus_link3"><a href="https://www.digitaladvisorygroup.io">www.digitaladvisorygroup.io</a></string>
    <string name="impressus_link4"><a href="https://www.github.com/digitaladvisorygroup/midar">www.github.com/digitaladvisorygroup/midar</a></string>
    <string name="impressus_description1">Bundesamt fur informatik und Telekommunikation BIT</string>
    <string name="impressus_description2">Office féderal de l’informatique et de la télécommunication OFIT</string>
    <string name="impressus_description3">Ufficio federale dell’informatica e della telecomunicazione UFIT</string>
    <string name="impressus_description4">Federal Office of Information Technology, Systems and Telecommunication FOITT</string>
    <string name="impressus_description">Bundesamt fur informatik und \n Telekommunikation BIT Office federal de \n I\'informatique et de la telecommunication \n OFIT Ufficio federablr dell\'informatica e della \n telecomunicazione UFIT Federal Office of \n Information Technology, Systems and \n Telecommunication FOITT</string>

    <string name="published_by">Published by</string>
    <string name="min_ago">1 min ago</string>
    <string name="hour_ago">1 hour ago</string>
    <string name="day_ago">1 day ago</string>
    <string name="Please_Enter_Email">Please Enter Email</string>
    <string name="Please_Enter_Valid_Email">Please Enter Valid Email</string>

    <string name="days_ago">days ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="moments_ago">moments ago</string>
    <string name="ok">Ok</string>
    <string name="Replies_to">Replies to</string>
    <string name="comment_on_this_post">comment on this post</string>


</resources>