<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/languageEnglish"
                android:text="@string/english"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@color/colorGrey"
                android:layout_height="0.3dp">
            </View>
            <TextView
                android:id="@+id/languageGerman"
                android:text="@string/german"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@color/colorGrey"
                android:layout_height="0.3dp">
            </View>
            <TextView
                android:id="@+id/languageFrench"
                android:text="@string/french"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@color/colorGrey"
                android:layout_height="0.3dp">
            </View>
            <TextView
                android:id="@+id/languageItalian"
                android:text="@string/italian"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>