<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">
            <ImageView
                android:id="@+id/imgBack"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content">
            </ImageView>
            <TextView
                android:textColor="@color/colorWhite"
                android:text="@string/imprint"
                android:textSize="@dimen/_12sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </RelativeLayout>

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <RelativeLayout
                    android:id="@+id/rlGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@color/colorWhite">
                    <ImageView
                        android:scaleType="fitXY"
                        android:src="@drawable/impresus1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ImageView>
                    <TextView
                        android:id="@+id/txtVersion"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:text="Version 2.0"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <ImageView
                        android:id="@+id/redLogo"
                        android:scaleType="fitXY"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/app_icon"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp">
                    </ImageView>
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:text="idar"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/redLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </RelativeLayout>

                <TextView
                    android:id="@+id/publiePar"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/publish_by"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/rlGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:id="@+id/img2"
                    android:layout_below="@+id/publiePar"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/impressum2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp">
                </ImageView>
                <TextView
                    android:id="@+id/txtDescription1"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/impressus_description1"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_65sdp"
                    android:layout_below="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtDescription2"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/impressus_description2"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginLeft="@dimen/_65sdp"
                    android:layout_below="@+id/txtDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtDescription3"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/impressus_description3"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginLeft="@dimen/_65sdp"
                    android:layout_below="@+id/txtDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtDescription4"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/impressus_description4"
                    android:textSize="@dimen/_13sdp"
                    android:layout_marginLeft="@dimen/_65sdp"
                    android:layout_below="@+id/txtDescription3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtOnlineHelp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/online_help"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/txtDescription4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtLink1"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/impressus_link1"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_below="@+id/txtOnlineHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/txtLegal"
                    android:textColor="@color/colorBlack"
                    android:text="@string/legal"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/txtLink1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtLink2"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/data_protaction"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_below="@+id/txtLegal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtDevelopedBy"
                    android:textColor="@color/colorBlack"
                    android:text="@string/developed_by"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/txtLink2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:id="@+id/img3"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/txtDevelopedBy"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/impressus_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp">
                </ImageView>
                <TextView
                    android:id="@+id/txtLink3"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/impressus_link3"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/img3"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtSourceCode"
                    android:textColor="@color/colorBlack"
                    android:text="@string/source_code"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/txtLink3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtdescription2"
                    android:textColor="@color/colorLightBlack"
                    android:text="@string/license"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_below="@+id/txtSourceCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtLink4"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/impressus_link4"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_below="@+id/txtdescription2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>
</layout>