<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">
            <ImageView
                android:id="@+id/imgBack"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ImageView>
            <TextView
                android:textColor="@color/colorWhite"
                android:text="@string/verify_otp"
                android:textSize="@dimen/_14sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/black"
                android:text="@string/email_with"
                android:id="@+id/txtEmailWith"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:textColor="@color/black"
                android:text="@string/verify_otp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/txtEmailWith"
                android:id="@+id/txtVerifyotp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_below="@+id/txtVerifyotp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:height="40dp"
                app:width="40dp"
                app:bar_enabled="true"
                app:bar_height="2dp"
                app:length="6"
                app:otp_text_size="24dp"/>
            <RelativeLayout
                android:layout_below="@+id/otp_view"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:text="@string/resend"
                    android:id="@+id/btnResend"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:text="@string/verify"
                    android:id="@+id/btnVerify"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_toRightOf="@+id/btnResend"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </RelativeLayout>




    </RelativeLayout>
</layout>